@@ -17,15 +17,11 @@
 
 package org.apache.poi.hslf.usermodel;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.*;
 
-import java.io.ByteArrayOutputStream;
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.IOException;
-import java.io.InputStream;
+import java.awt.Color;
+import java.awt.Rectangle;
+import java.io.*;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.HashMap;
@@ -41,32 +37,17 @@ import org.apache.poi.ddf.EscherArrayProperty;
 import org.apache.poi.ddf.EscherColorRef;
 import org.apache.poi.ddf.EscherOptRecord;
 import org.apache.poi.ddf.EscherProperties;
-import org.apache.poi.hslf.HSLFSlideShow;
 import org.apache.poi.hslf.HSLFTestDataSamples;
 import org.apache.poi.hslf.exceptions.OldPowerPointFormatException;
-import org.apache.poi.hslf.model.AutoShape;
-import org.apache.poi.hslf.model.Background;
-import org.apache.poi.hslf.model.Fill;
-import org.apache.poi.hslf.model.HeadersFooters;
-import org.apache.poi.hslf.model.MasterSheet;
-import org.apache.poi.hslf.model.Notes;
-import org.apache.poi.hslf.model.Picture;
-import org.apache.poi.hslf.model.Shape;
-import org.apache.poi.hslf.model.ShapeGroup;
-import org.apache.poi.hslf.model.Slide;
-import org.apache.poi.hslf.model.SlideMaster;
-import org.apache.poi.hslf.model.TextBox;
-import org.apache.poi.hslf.model.TextRun;
-import org.apache.poi.hslf.model.TextShape;
-import org.apache.poi.hslf.model.TitleMaster;
-import org.apache.poi.hslf.record.Document;
-import org.apache.poi.hslf.record.Record;
-import org.apache.poi.hslf.record.SlideListWithText;
+import org.apache.poi.hslf.model.*;
+import org.apache.poi.hslf.model.textproperties.TextPropCollection;
+import org.apache.poi.hslf.model.textproperties.TextPropCollection.TextPropType;
+import org.apache.poi.hslf.record.*;
 import org.apache.poi.hslf.record.SlideListWithText.SlideAtomsSet;
-import org.apache.poi.hslf.record.TextHeaderAtom;
-import org.apache.poi.util.LittleEndian;
-import org.apache.poi.util.StringUtil;
-import org.apache.poi.util.Units;
+import org.apache.poi.poifs.filesystem.DocumentEntry;
+import org.apache.poi.poifs.filesystem.POIFSFileSystem;
+import org.apache.poi.util.*;
+import org.junit.Ignore;
 import org.junit.Test;
 
 /**
@@ -83,17 +64,17 @@ public final class TestBugs {
      */
     @Test
     public void bug41384() throws Exception {
-        HSLFSlideShow hslf = new HSLFSlideShow(_slTests.openResourceAsStream("41384.ppt"));
+        HSLFSlideShowImpl hslf = new HSLFSlideShowImpl(_slTests.openResourceAsStream("41384.ppt"));
 
-        SlideShow ppt = new SlideShow(hslf);
+        HSLFSlideShow ppt = new HSLFSlideShow(hslf);
         assertTrue("No Exceptions while reading file", true);
 
-        assertEquals(1, ppt.getSlides().length);
+        assertEquals(1, ppt.getSlides().size());
 
-        PictureData[] pict = ppt.getPictureData();
+        HSLFPictureData[] pict = ppt.getPictureData();
         assertEquals(2, pict.length);
-        assertEquals(Picture.JPEG, pict[0].getType());
-        assertEquals(Picture.JPEG, pict[1].getType());
+        assertEquals(HSLFPictureShape.JPEG, pict[0].getType());
+        assertEquals(HSLFPictureShape.JPEG, pict[1].getType());
     }
 
     /**
@@ -102,27 +83,27 @@ public final class TestBugs {
      */
     @Test
     public void bug42474_1() throws Exception {
-        HSLFSlideShow hslf = new HSLFSlideShow(_slTests.openResourceAsStream("42474-1.ppt"));
+        HSLFSlideShowImpl hslf = new HSLFSlideShowImpl(_slTests.openResourceAsStream("42474-1.ppt"));
 
-        SlideShow ppt = new SlideShow(hslf);
+        HSLFSlideShow ppt = new HSLFSlideShow(hslf);
         assertTrue("No Exceptions while reading file", true);
-        assertEquals(2, ppt.getSlides().length);
+        assertEquals(2, ppt.getSlides().size());
 
-        TextRun txrun;
-        Notes notes;
+        List<HSLFTextParagraph> txrun;
+        HSLFNotes notes;
 
-        notes = ppt.getSlides()[0].getNotesSheet();
+        notes = ppt.getSlides().get(0).getNotes();
         assertNotNull(notes);
-        txrun = notes.getTextRuns()[0];
-        assertEquals("Notes-1", txrun.getRawText());
-        assertEquals(false, txrun.getRichTextRuns()[0].isBold());
+        txrun = notes.getTextParagraphs().get(0);
+        assertEquals("Notes-1", HSLFTextParagraph.getRawText(txrun));
+        assertEquals(false, txrun.get(0).getTextRuns().get(0).isBold());
 
         //notes for the second slide are in bold
-        notes = ppt.getSlides()[1].getNotesSheet();
+        notes = ppt.getSlides().get(1).getNotes();
         assertNotNull(notes);
-        txrun = notes.getTextRuns()[0];
-        assertEquals("Notes-2", txrun.getRawText());
-        assertEquals(true, txrun.getRichTextRuns()[0].isBold());
+        txrun = notes.getTextParagraphs().get(0);
+        assertEquals("Notes-2", HSLFTextParagraph.getRawText(txrun));
+        assertEquals(true, txrun.get(0).getTextRuns().get(0).isBold());
 
     }
 
@@ -131,9 +112,9 @@ public final class TestBugs {
      */
     @Test
     public void bug42474_2() throws Exception {
-        HSLFSlideShow hslf = new HSLFSlideShow(_slTests.openResourceAsStream("42474-2.ppt"));
+        HSLFSlideShowImpl hslf = new HSLFSlideShowImpl(_slTests.openResourceAsStream("42474-2.ppt"));
 
-        SlideShow ppt = new SlideShow(hslf);
+        HSLFSlideShow ppt = new HSLFSlideShow(hslf);
 
         //map slide number and starting phrase of its notes
         Map<Integer, String> notesMap = new HashMap<Integer, String>();
@@ -143,13 +124,12 @@ public final class TestBugs {
         notesMap.put(Integer.valueOf(7), "Although multiply and square root are easier");
         notesMap.put(Integer.valueOf(8), "The bus Z is split into Z_H and Z_L");
 
-        Slide[] slide = ppt.getSlides();
-        for (int i = 0; i < slide.length; i++) {
-            Integer slideNumber = Integer.valueOf(slide[i].getSlideNumber());
-            Notes notes = slide[i].getNotesSheet();
+        for (HSLFSlide slide : ppt.getSlides()) {
+            Integer slideNumber = Integer.valueOf(slide.getSlideNumber());
+            HSLFNotes notes = slide.getNotes();
             if (notesMap.containsKey(slideNumber)){
                 assertNotNull(notes);
-                String text = notes.getTextRuns()[0].getRawText();
+                String text = HSLFTextParagraph.getRawText(notes.getTextParagraphs().get(0));
                 String startingPhrase = notesMap.get(slideNumber);
                 assertTrue("Notes for slide " + slideNumber + " must start with " +
                         startingPhrase , text.startsWith(startingPhrase));
@@ -162,18 +142,16 @@ public final class TestBugs {
      */
     @Test
     public void bug42485 () throws Exception {
-        HSLFSlideShow hslf = new HSLFSlideShow(_slTests.openResourceAsStream("42485.ppt"));
+        HSLFSlideShowImpl hslf = new HSLFSlideShowImpl(_slTests.openResourceAsStream("42485.ppt"));
 
-        SlideShow ppt = new SlideShow(hslf);
-        Shape[] shape = ppt.getSlides()[0].getShapes();
-        for (int i = 0; i < shape.length; i++) {
-            if(shape[i] instanceof ShapeGroup){
-                ShapeGroup  group = (ShapeGroup)shape[i];
-                Shape[] sh = group.getShapes();
-                for (int j = 0; j < sh.length; j++) {
-                    if( sh[j] instanceof TextBox){
-                        TextBox txt = (TextBox)sh[j];
-                        assertNotNull(txt.getTextRun());
+        HSLFSlideShow ppt = new HSLFSlideShow(hslf);
+        for (HSLFShape shape : ppt.getSlides().get(0).getShapes()) {
+            if(shape instanceof HSLFGroupShape){
+                HSLFGroupShape group = (HSLFGroupShape)shape;
+                for (HSLFShape sh : group.getShapes()) {
+                    if(sh instanceof HSLFTextBox){
+                        HSLFTextBox txt = (HSLFTextBox)sh;
+                        assertNotNull(txt.getTextParagraphs());
                     }
                 }
             }
@@ -185,17 +163,15 @@ public final class TestBugs {
      */
     @Test
     public void bug42484 () throws Exception {
-        HSLFSlideShow hslf = new HSLFSlideShow(_slTests.openResourceAsStream("42485.ppt"));
+        HSLFSlideShowImpl hslf = new HSLFSlideShowImpl(_slTests.openResourceAsStream("42485.ppt"));
 
-        SlideShow ppt = new SlideShow(hslf);
-        Shape[] shape = ppt.getSlides()[0].getShapes();
-        for (int i = 0; i < shape.length; i++) {
-            if(shape[i] instanceof ShapeGroup){
-                ShapeGroup  group = (ShapeGroup)shape[i];
+        HSLFSlideShow ppt = new HSLFSlideShow(hslf);
+        for (HSLFShape shape : ppt.getSlides().get(0).getShapes()) {
+            if(shape instanceof HSLFGroupShape){
+                HSLFGroupShape  group = (HSLFGroupShape)shape;
                 assertNotNull(group.getAnchor());
-                Shape[] sh = group.getShapes();
-                for (int j = 0; j < sh.length; j++) {
-                    assertNotNull(sh[j].getAnchor());
+                for (HSLFShape sh : group.getShapes()) {
+                    assertNotNull(sh.getAnchor());
                 }
             }
         }
@@ -207,33 +183,33 @@ public final class TestBugs {
      */
     @Test
     public void bug41381() throws Exception {
-        HSLFSlideShow hslf = new HSLFSlideShow(_slTests.openResourceAsStream("alterman_security.ppt"));
+        HSLFSlideShowImpl hslf = new HSLFSlideShowImpl(_slTests.openResourceAsStream("alterman_security.ppt"));
 
-        SlideShow ppt = new SlideShow(hslf);
+        HSLFSlideShow ppt = new HSLFSlideShow(hslf);
         assertTrue("No Exceptions while reading file", true);
 
-        assertEquals(1, ppt.getSlidesMasters().length);
-        assertEquals(1, ppt.getTitleMasters().length);
-        Slide[] slide = ppt.getSlides();
-        for (int i = 0; i < slide.length; i++) {
-            MasterSheet master = slide[i].getMasterSheet();
-            if (i == 0) assertTrue(master instanceof TitleMaster); //the first slide follows TitleMaster
-            else assertTrue(master instanceof SlideMaster);
+        assertEquals(1, ppt.getSlideMasters().size());
+        assertEquals(1, ppt.getTitleMasters().size());
+        boolean isFirst = true;
+        for (HSLFSlide slide : ppt.getSlides()) {
+            HSLFMasterSheet master = slide.getMasterSheet();
+            // the first slide follows TitleMaster
+            assertTrue(isFirst ? master instanceof HSLFTitleMaster : master instanceof HSLFSlideMaster);
+            isFirst = false;
         }
     }
 
     /**
      * Bug 42486:  Failure parsing a seemingly valid PPT
      */
+    @SuppressWarnings("unused")
     @Test
     public void bug42486 () throws Exception {
-        HSLFSlideShow hslf = new HSLFSlideShow(_slTests.openResourceAsStream("42486.ppt"));
+        HSLFSlideShowImpl hslf = new HSLFSlideShowImpl(_slTests.openResourceAsStream("42486.ppt"));
 
-        SlideShow ppt = new SlideShow(hslf);
-        Slide[] slide = ppt.getSlides();
-        for (int i = 0; i < slide.length; i++) {
-            @SuppressWarnings("unused")
-            Shape[] shape = slide[i].getShapes();
+        HSLFSlideShow ppt = new HSLFSlideShow(hslf);
+        for (HSLFSlide slide : ppt.getSlides()) {
+            List<HSLFShape> shape = slide.getShapes();
         }
         assertTrue("No Exceptions while reading file", true);
 
@@ -244,20 +220,17 @@ public final class TestBugs {
      */
     @Test
     public void bug42524 () throws Exception {
-        HSLFSlideShow hslf = new HSLFSlideShow(_slTests.openResourceAsStream("42486.ppt"));
+        HSLFSlideShowImpl hslf = new HSLFSlideShowImpl(_slTests.openResourceAsStream("42486.ppt"));
 
-        SlideShow ppt = new SlideShow(hslf);
+        HSLFSlideShow ppt = new HSLFSlideShow(hslf);
         //walk down the tree and see if there were no errors while reading
-        Slide[] slide = ppt.getSlides();
-        for (int i = 0; i < slide.length; i++) {
-            Shape[] shape = slide[i].getShapes();
-            for (int j = 0; j < shape.length; j++) {
-                assertNotNull(shape[j].getShapeName());
-                if (shape[j] instanceof ShapeGroup){
-                    ShapeGroup group = (ShapeGroup)shape[j];
-                    Shape[] comps = group.getShapes();
-                    for (int k = 0; k < comps.length; k++) {
-                        assertNotNull(comps[k].getShapeName());
+        for (HSLFSlide slide : ppt.getSlides()) {
+            for (HSLFShape shape : slide.getShapes()) {
+                assertNotNull(shape.getShapeName());
+                if (shape instanceof HSLFGroupShape){
+                    HSLFGroupShape group = (HSLFGroupShape)shape;
+                    for (HSLFShape comps : group.getShapes()) {
+                        assertNotNull(comps.getShapeName());
                    }
                 }
             }
@@ -270,30 +243,26 @@ public final class TestBugs {
     /**
      * Bug 42520:  NPE in Picture.getPictureData()
      */
+    @SuppressWarnings("unused")
     @Test
     public void bug42520 () throws Exception {
-        HSLFSlideShow hslf = new HSLFSlideShow(_slTests.openResourceAsStream("42520.ppt"));
+        HSLFSlideShowImpl hslf = new HSLFSlideShowImpl(_slTests.openResourceAsStream("42520.ppt"));
 
-        SlideShow ppt = new SlideShow(hslf);
+        HSLFSlideShow ppt = new HSLFSlideShow(hslf);
 
         //test case from the bug report
-        ShapeGroup shapeGroup = (ShapeGroup)ppt.getSlides()[11].getShapes()[10];
-        Picture picture = (Picture)shapeGroup.getShapes()[0];
+        HSLFGroupShape shapeGroup = (HSLFGroupShape)ppt.getSlides().get(11).getShapes().get(10);
+        HSLFPictureShape picture = (HSLFPictureShape)shapeGroup.getShapes().get(0);
         picture.getPictureData();
 
         //walk down the tree and see if there were no errors while reading
-        Slide[] slide = ppt.getSlides();
-        for (int i = 0; i < slide.length; i++) {
-            Shape[] shape = slide[i].getShapes();
-            for (int j = 0; j < shape.length; j++) {
-              if (shape[j] instanceof ShapeGroup){
-                    ShapeGroup group = (ShapeGroup)shape[j];
-                    Shape[] comps = group.getShapes();
-                    for (int k = 0; k < comps.length; k++) {
-                        Shape comp = comps[k];
-                        if (comp instanceof Picture){
-                            @SuppressWarnings("unused")
-                            PictureData pict = ((Picture)comp).getPictureData();
+        for (HSLFSlide slide : ppt.getSlides()) {
+            for (HSLFShape shape : slide.getShapes()) {
+              if (shape instanceof HSLFGroupShape){
+                    HSLFGroupShape group = (HSLFGroupShape)shape;
+                    for (HSLFShape comp : group.getShapes()) {
+                        if (comp instanceof HSLFPictureShape){
+                            HSLFPictureData pict = ((HSLFPictureShape)comp).getPictureData();
                         }
                     }
                 }
@@ -310,14 +279,14 @@ public final class TestBugs {
      */
     @Test
     public void bug38256 () throws Exception {
-        SlideShow ppt = new SlideShow(_slTests.openResourceAsStream("38256.ppt"));
+        HSLFSlideShow ppt = new HSLFSlideShow(_slTests.openResourceAsStream("38256.ppt"));
 
         assertTrue("No Exceptions while reading file", true);
 
-        Slide[] slide = ppt.getSlides();
-        assertEquals(1, slide.length);
-        TextRun[] runs = slide[0].getTextRuns();
-        assertEquals(4, runs.length);
+        List<HSLFSlide> slide = ppt.getSlides();
+        assertEquals(1, slide.size());
+        List<List<HSLFTextParagraph>> paras = slide.get(0).getTextParagraphs();
+        assertEquals(4, paras.size());
 
         Set<String> txt = new HashSet<String>();
         txt.add("\u201CHAPPY BIRTHDAY SCOTT\u201D");
@@ -325,8 +294,8 @@ public final class TestBugs {
         txt.add("PS Nobody is allowed to hassle Scott TODAY\u2026");
         txt.add("Drinks will be in the Boardroom at 5pm today to celebrate Scott\u2019s B\u2019Day\u2026  See you all there!");
 
-        for (int i = 0; i < runs.length; i++) {
-            String text = runs[i].getRawText();
+        for (List<HSLFTextParagraph> para : paras) {
+            String text = HSLFTextParagraph.getRawText(para);
             assertTrue(text, txt.contains(text));
         }
 
@@ -337,39 +306,37 @@ public final class TestBugs {
      * ( also fixed followup: getTextRuns() returns no text )
      */
     @Test
-    public void bug43781 () throws Exception {
-        SlideShow ppt = new SlideShow(_slTests.openResourceAsStream("43781.ppt"));
+    public void bug43781() throws Exception {
+        HSLFSlideShow ppt = new HSLFSlideShow(_slTests.openResourceAsStream("43781.ppt"));
 
         assertTrue("No Exceptions while reading file", true);
 
         // Check the first slide
-        Slide slide = ppt.getSlides()[0];
-        TextRun[] slTr = slide.getTextRuns();
+        HSLFSlide slide = ppt.getSlides().get(0);
+        List<List<HSLFTextParagraph>> slTr = slide.getTextParagraphs();
         
-        // Has two text runs, one from slide text, one from drawing
-        assertEquals(2, slTr.length);
-        assertEquals(false, slTr[0].isDrawingBased());
-        assertEquals(true, slTr[1].isDrawingBased());
-        assertEquals("First run", slTr[0].getText());
-        assertEquals("Second run", slTr[1].getText());
+        // Has 3 text paragraphs, two from slide text (empty title / filled body), one from drawing
+        assertEquals(3, slTr.size());
+        assertFalse(slTr.get(0).get(0).isDrawingBased());
+        assertFalse(slTr.get(1).get(0).isDrawingBased());
+        assertTrue(slTr.get(2).get(0).isDrawingBased());
+        assertEquals("", HSLFTextParagraph.getRawText(slTr.get(0)));
+        assertEquals("First run", HSLFTextParagraph.getRawText(slTr.get(1)));
+        assertEquals("Second run", HSLFTextParagraph.getRawText(slTr.get(2)));
 
         // Check the shape based text runs
-        List<TextRun> lst = new ArrayList<TextRun>();
-        Shape[] shape = slide.getShapes();
-        for (int i = 0; i < shape.length; i++) {
-            if( shape[i] instanceof TextShape){
-                TextRun textRun = ((TextShape)shape[i]).getTextRun();
-                if(textRun != null) {
-                    lst.add(textRun);
-                }
+        List<HSLFTextParagraph> lst = new ArrayList<HSLFTextParagraph>();
+        for (HSLFShape shape : slide.getShapes()) {
+            if (shape instanceof HSLFTextShape){
+                List<HSLFTextParagraph> textRun = ((HSLFTextShape)shape).getTextParagraphs();
+                lst.addAll(textRun);
             }
 
         }
-        // There should be only one shape based one found
-        assertEquals(1, lst.size());
         
-        // And it should be the second one
-        assertEquals("Second run", lst.get(0).getText());
+        // There are two shapes in the ppt
+        assertEquals(2, lst.size());
+        assertEquals("First runSecond run", HSLFTextParagraph.getRawText(lst));
     }
 
     /**
@@ -377,17 +344,17 @@ public final class TestBugs {
      */
     @Test
     public void bug44296  () throws Exception {
-        SlideShow ppt = new SlideShow(_slTests.openResourceAsStream("44296.ppt"));
+        HSLFSlideShow ppt = new HSLFSlideShow(_slTests.openResourceAsStream("44296.ppt"));
 
-        Slide slide = ppt.getSlides()[0];
+        HSLFSlide slide = ppt.getSlides().get(0);
 
-        Background b = slide.getBackground();
-        Fill f = b.getFill();
-        assertEquals(Fill.FILL_PICTURE, f.getFillType());
+        HSLFBackground b = slide.getBackground();
+        HSLFFill f = b.getFill();
+        assertEquals(HSLFFill.FILL_PICTURE, f.getFillType());
 
-        PictureData pict = f.getPictureData();
+        HSLFPictureData pict = f.getPictureData();
         assertNotNull(pict);
-        assertEquals(Picture.JPEG, pict.getType());
+        assertEquals(HSLFPictureShape.JPEG, pict.getType());
     }
 
     /**
@@ -396,7 +363,7 @@ public final class TestBugs {
     @Test
     public void bug44770() throws Exception {
         try {
-             new SlideShow(_slTests.openResourceAsStream("44770.ppt"));
+             new HSLFSlideShow(_slTests.openResourceAsStream("44770.ppt"));
         } catch (RuntimeException e) {
             if (e.getMessage().equals("Couldn't instantiate the class for type with id 1036 on class class org.apache.poi.hslf.record.PPDrawing")) {
                 throw new AssertionFailedError("Identified bug 44770");
@@ -410,18 +377,18 @@ public final class TestBugs {
      */
     @Test
     public void bug41071() throws Exception {
-        SlideShow ppt = new SlideShow(_slTests.openResourceAsStream("41071.ppt"));
+        HSLFSlideShow ppt = new HSLFSlideShow(_slTests.openResourceAsStream("41071.ppt"));
 
-        Slide slide = ppt.getSlides()[0];
-        Shape[] sh = slide.getShapes();
-        assertEquals(1, sh.length);
-        assertTrue(sh[0] instanceof TextShape);
-        TextShape tx = (TextShape)sh[0];
-        assertEquals("Fundera, planera och involvera.", tx.getTextRun().getText());
+        HSLFSlide slide = ppt.getSlides().get(0);
+        List<HSLFShape> sh = slide.getShapes();
+        assertEquals(1, sh.size());
+        assertTrue(sh.get(0) instanceof HSLFTextShape);
+        HSLFTextShape tx = (HSLFTextShape)sh.get(0);
+        assertEquals("Fundera, planera och involvera.", HSLFTextParagraph.getRawText(tx.getTextParagraphs()));
 
-        TextRun[] run = slide.getTextRuns();
-        assertEquals(1, run.length);
-        assertEquals("Fundera, planera och involvera.", run[0].getText());
+        List<List<HSLFTextParagraph>> run = slide.getTextParagraphs();
+        assertEquals(3, run.size());
+        assertEquals("Fundera, planera och involvera.", HSLFTextParagraph.getRawText(run.get(2)));
     }
 
     /**
@@ -431,10 +398,10 @@ public final class TestBugs {
     @Test(expected=OldPowerPointFormatException.class)
     public void bug41711() throws Exception {
     	// New file is fine
-        new SlideShow(_slTests.openResourceAsStream("SampleShow.ppt"));
+        new HSLFSlideShow(_slTests.openResourceAsStream("SampleShow.ppt"));
 
         // PowerPoint 95 gives an old format exception
-    	new SlideShow(_slTests.openResourceAsStream("PPT95.ppt"));
+    	new HSLFSlideShow(_slTests.openResourceAsStream("PPT95.ppt"));
     }
     
     /**
@@ -442,12 +409,12 @@ public final class TestBugs {
      */
     @Test
     public void bug49648() throws Exception {
-       SlideShow ppt = new SlideShow(_slTests.openResourceAsStream("49648.ppt"));
-       for(Slide slide : ppt.getSlides()) {
-          for(TextRun run : slide.getTextRuns()) {
-             String text = run.getRawText();
+       HSLFSlideShow ppt = new HSLFSlideShow(_slTests.openResourceAsStream("49648.ppt"));
+       for(HSLFSlide slide : ppt.getSlides()) {
+          for(List<HSLFTextParagraph> run : slide.getTextParagraphs()) {
+             String text = HSLFTextParagraph.getRawText(run);
              text.replace("{txtTot}", "With \u0123\u1234\u5678 unicode");
-             run.setRawText(text);
+             HSLFTextParagraph.setText(run, text);
           }
        }
     }
@@ -458,10 +425,10 @@ public final class TestBugs {
     @Test
     public void bug41246a() throws Exception {
         InputStream fis = _slTests.openResourceAsStream("41246-1.ppt");
-        HSLFSlideShow hslf = new HSLFSlideShow(fis);
+        HSLFSlideShowImpl hslf = new HSLFSlideShowImpl(fis);
         fis.close();
 
-        SlideShow ppt = new SlideShow(hslf);
+        HSLFSlideShow ppt = new HSLFSlideShow(hslf);
         assertTrue("No Exceptions while reading file", true);
 
         ppt = HSLFTestDataSamples.writeOutAndReadBack(ppt);
@@ -471,10 +438,10 @@ public final class TestBugs {
     @Test
     public void bug41246b() throws Exception {
         InputStream fis = _slTests.openResourceAsStream("41246-2.ppt");
-        HSLFSlideShow hslf = new HSLFSlideShow(fis);
+        HSLFSlideShowImpl hslf = new HSLFSlideShowImpl(fis);
         fis.close();
 
-        SlideShow ppt = new SlideShow(hslf);
+        HSLFSlideShow ppt = new HSLFSlideShow(hslf);
         assertTrue("No Exceptions while reading file", true);
 
         ppt = HSLFTestDataSamples.writeOutAndReadBack(ppt);
@@ -487,14 +454,14 @@ public final class TestBugs {
     @Test
     public void bug45776() throws Exception {
         InputStream is = _slTests.openResourceAsStream("45776.ppt");
-        SlideShow ppt = new SlideShow(new HSLFSlideShow(is));
+        HSLFSlideShow ppt = new HSLFSlideShow(new HSLFSlideShowImpl(is));
         is.close();
 
         // get slides
-        for (Slide slide : ppt.getSlides()) {
-            for (Shape shape : slide.getShapes()) {
-                if (!(shape instanceof TextBox)) continue;
-                TextBox tb = (TextBox) shape;
+        for (HSLFSlide slide : ppt.getSlides()) {
+            for (HSLFShape shape : slide.getShapes()) {
+                if (!(shape instanceof HSLFTextBox)) continue;
+                HSLFTextBox tb = (HSLFTextBox) shape;
                 // work with TextBox
                 String str = tb.getText();
 
@@ -502,9 +469,9 @@ public final class TestBugs {
                 str = str.replace("$$DATE$$", new Date().toString());
                 tb.setText(str);
                 
-                TextRun tr = tb.getTextRun();
-                assertEquals(str.length()+1,tr.getStyleTextPropAtom().getParagraphStyles().getFirst().getCharactersCovered());
-                assertEquals(str.length()+1,tr.getStyleTextPropAtom().getCharacterStyles().getFirst().getCharactersCovered());
+                List<HSLFTextParagraph> tr = tb.getTextParagraphs();
+                assertEquals(str.length()+1,tr.get(0).getParagraphStyle().getCharactersCovered());
+                assertEquals(str.length()+1,tr.get(0).getTextRuns().get(0).getCharacterStyle().getCharactersCovered());
             }
         }
     }
@@ -513,12 +480,12 @@ public final class TestBugs {
     public void bug55732() throws Exception {
         File file = _slTests.getFile("bug55732.ppt");
         
-        HSLFSlideShow ss = new HSLFSlideShow(file.getAbsolutePath());
-        SlideShow _show = new SlideShow(ss);
-        Slide[] _slides = _show.getSlides();
+        HSLFSlideShowImpl ss = new HSLFSlideShowImpl(file.getAbsolutePath());
+        HSLFSlideShow _show = new HSLFSlideShow(ss);
+        List<HSLFSlide> _slides = _show.getSlides();
 
         /* Iterate over slides and extract text */
-        for( Slide slide : _slides ) {
+        for( HSLFSlide slide : _slides ) {
             HeadersFooters hf = slide.getHeadersFooters();
             /*boolean visible =*/ hf.isHeaderVisible(); // exception happens here
         }
@@ -529,10 +496,10 @@ public final class TestBugs {
     public void bug56260() throws Exception {
         File file = _slTests.getFile("56260.ppt");
         
-        HSLFSlideShow ss = new HSLFSlideShow(file.getAbsolutePath());
-        SlideShow _show = new SlideShow(ss);
-        Slide[] _slides = _show.getSlides();
-        assertEquals(13, _slides.length);
+        HSLFSlideShowImpl ss = new HSLFSlideShowImpl(file.getAbsolutePath());
+        HSLFSlideShow _show = new HSLFSlideShow(ss);
+        List<HSLFSlide> _slides = _show.getSlides();
+        assertEquals(13, _slides.size());
         
         // Check the number of TextHeaderAtoms on Slide 1
         Document dr = _show.getDocumentRecord();
@@ -553,22 +520,22 @@ public final class TestBugs {
         // Check the number of text runs based on the slide (not textbox)
         // Will have skipped the empty one
         int str = 0;
-        for (TextRun tr : _slides[0].getTextRuns()) {
-            if (! tr.isDrawingBased()) str++;
+        for (List<HSLFTextParagraph> tr : _slides.get(0).getTextParagraphs()) {
+            if (! tr.get(0).isDrawingBased()) str++;
         }
-        assertEquals(1, str);
+        assertEquals(2, str);
     }
     
     @Test
     public void bug37625() throws IOException {
         InputStream inputStream = new FileInputStream(_slTests.getFile("37625.ppt"));
         try {
-            SlideShow slideShow = new SlideShow(inputStream);
-            assertEquals(29, slideShow.getSlides().length);
+            HSLFSlideShow slideShow = new HSLFSlideShow(inputStream);
+            assertEquals(29, slideShow.getSlides().size());
             
-            SlideShow slideBack = HSLFTestDataSamples.writeOutAndReadBack(slideShow);
+            HSLFSlideShow slideBack = HSLFTestDataSamples.writeOutAndReadBack(slideShow);
             assertNotNull(slideBack);
-            assertEquals(29, slideBack.getSlides().length);
+            assertEquals(29, slideBack.getSlides().size());
         } finally {
             inputStream.close();
         }
@@ -578,12 +545,12 @@ public final class TestBugs {
     public void bug57272() throws Exception {
         InputStream inputStream = new FileInputStream(_slTests.getFile("57272_corrupted_usereditatom.ppt"));
         try {
-            SlideShow slideShow = new SlideShow(inputStream);
-            assertEquals(6, slideShow.getSlides().length);
+            HSLFSlideShow slideShow = new HSLFSlideShow(inputStream);
+            assertEquals(6, slideShow.getSlides().size());
 
-            SlideShow slideBack = HSLFTestDataSamples.writeOutAndReadBack(slideShow);
+            HSLFSlideShow slideBack = HSLFTestDataSamples.writeOutAndReadBack(slideShow);
             assertNotNull(slideBack);
-            assertEquals(6, slideBack.getSlides().length);
+            assertEquals(6, slideBack.getSlides().size());
         } finally {
             inputStream.close();
         }
@@ -593,10 +560,10 @@ public final class TestBugs {
     public void bug49541() throws Exception {
         InputStream inputStream = new FileInputStream(_slTests.getFile("49541_symbol_map.ppt"));
         try {
-            SlideShow slideShow = new SlideShow(inputStream);
-            Slide slide = slideShow.getSlides()[0];
-            ShapeGroup sg = (ShapeGroup)slide.getShapes()[0];
-            TextBox tb = (TextBox)sg.getShapes()[0];
+            HSLFSlideShow slideShow = new HSLFSlideShow(inputStream);
+            HSLFSlide slide = slideShow.getSlides().get(0);
+            HSLFGroupShape sg = (HSLFGroupShape)slide.getShapes().get(0);
+            HSLFTextBox tb = (HSLFTextBox)sg.getShapes().get(0);
             String text = StringUtil.mapMsCodepointString(tb.getText());
             assertEquals("\u226575 years", text);
         } finally {
@@ -608,7 +575,7 @@ public final class TestBugs {
     public void bug47261() throws Exception {
         InputStream inputStream = new FileInputStream(_slTests.getFile("bug47261.ppt"));
         try {
-            SlideShow slideShow = new SlideShow(inputStream);
+            HSLFSlideShow slideShow = new HSLFSlideShow(inputStream);
             slideShow.removeSlide(0);
             slideShow.createSlide();
             ByteArrayOutputStream bos = new ByteArrayOutputStream();
@@ -622,8 +589,8 @@ public final class TestBugs {
     public void bug56240() throws Exception {
         InputStream inputStream = new FileInputStream(_slTests.getFile("bug56240.ppt"));
         try {
-            SlideShow slideShow = new SlideShow(inputStream);
-            int slideCnt = slideShow.getSlides().length;
+            HSLFSlideShow slideShow = new HSLFSlideShow(inputStream);
+            int slideCnt = slideShow.getSlides().size();
             assertEquals(105, slideCnt);
             ByteArrayOutputStream bos = new ByteArrayOutputStream();
             slideShow.write(bos);
@@ -637,10 +604,10 @@ public final class TestBugs {
     public void bug46441() throws Exception {
         InputStream inputStream = new FileInputStream(_slTests.getFile("bug46441.ppt"));
         try {
-            SlideShow slideShow = new SlideShow(inputStream);
-            AutoShape as = (AutoShape)slideShow.getSlides()[0].getShapes()[0];
+            HSLFSlideShow slideShow = new HSLFSlideShow(inputStream);
+            HSLFAutoShape as = (HSLFAutoShape)slideShow.getSlides().get(0).getShapes().get(0);
             EscherOptRecord opt = as.getEscherOptRecord();
-            EscherArrayProperty ep = Shape.getEscherProperty(opt, EscherProperties.FILL__SHADECOLORS);
+            EscherArrayProperty ep = HSLFShape.getEscherProperty(opt, EscherProperties.FILL__SHADECOLORS);
             double exp[][] = {
                 // r, g, b, position
                 { 94, 158, 255, 0 },
@@ -653,7 +620,7 @@ public final class TestBugs {
             for (byte data[] : ep) {
                 EscherColorRef ecr = new EscherColorRef(data, 0, 4);
                 int rgb[] = ecr.getRGB();
-                double pos = Units.fixedPointToDecimal(LittleEndian.getInt(data, 4));
+                double pos = Units.fixedPointToDouble(LittleEndian.getInt(data, 4));
                 assertEquals((int)exp[i][0], rgb[0]);
                 assertEquals((int)exp[i][1], rgb[1]);
                 assertEquals((int)exp[i][2], rgb[2]);
